--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <!-- リセットCSS -->
   <link rel="stylesheet" href="css/reset.css"> 
   
-  <!-- slick（slick.css）読み込み -->
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   
   <!-- スタイルシート　-->
   <link rel="stylesheet" href="css/style.css">
   
+  <!-- slick（slick.css）読み込み -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
   <!-- google fonts 読み込み　-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -160,54 +161,254 @@
   <section class="p-top__voice p-top-voice u-bg-red">
     <div class="p-top-voice__inner">
       <h2 class="c-head c-head--white">生徒さんたちの声</h2>
-        <div class="p-top-voice__lists js-slider">
-           <a href="">
-              <div class="p-top-voice__list">
-                 <div class="p-top-voice__img">
-                    <picture>
-                      <source media="(max-width: 767px)" srcset="./images/voice01-sp.jpg">
-                      <img src="./images/voice01.jpg" alt="">
-                    </picture>
-                 </div>
-                 <p class="p-top-voice__name">証券会社勤務　丸山さん</p>
-                 <p class="p-top-voice__text">昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p>
-              </div>
-           </a>
-           <a href="">
-             <div class="p-top-voice__list">
-                <div class="p-top-voice__img">
-                   <picture>
-                     <source media="(max-width: 767px)" srcset="./images/voice01-sp.jpg">
-                     <img src="./images/voice01.jpg" alt="">
-                   </picture>
-                </div>
-                <p class="p-top-voice__name">IT会社勤務　S.Eさん</p>
-                <p class="p-top-voice__text">プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p>
-             </div>
-           </a>
-           <a href="">
-             <div class="p-top-voice__list">
-                <div class="p-top-voice__img">
-                   <picture>
-                     <source media="(max-width: 767px)" srcset="./images/voice01-sp.jpg">
-                     <img src="./images/voice01.jpg" alt="">
-                   </picture>
-                </div>
-                <p class="p-top-voice__name">都内大学生　田森さん</p>
-                <p class="p-top-voice__text">就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p>
-             </div>
-           </a>
+      <div class="p-top-voice__lists js-slider">
+        <div class="p-top-voice__list">
+          <a href="">
+            <div class="p-top-voice__img">
+               <picture>
+                 <source media="(max-width: 767px)" srcset="./images/voice01-sp.jpg">
+                 <img src="./images/voice01.jpg" alt="">
+               </picture>
+            </div>
+            <p class="p-top-voice__name">証券会社勤務　丸山さん</p>
+            <p class="p-top-voice__text">昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p>
+          </a>
+        </div>           
+        <div class="p-top-voice__list">
+         <a href="">
+           <div class="p-top-voice__img">
+              <picture>
+                <source media="(max-width: 767px)" srcset="./images/voice02-sp.jpg">
+                <img src="./images/voice02.jpg" alt="">
+              </picture>
+           </div>
+           <p class="p-top-voice__name">IT会社勤務　S.Eさん</p>
+           <p class="p-top-voice__text">プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p>
+         </a>
+        </div>          
+        <div class="p-top-voice__list">
+          <a href="">
+           <div class="p-top-voice__img">
+              <picture>
+                <source media="(max-width: 767px)" srcset="./images/voice03-sp.jpg">
+                <img src="./images/voice03.jpg" alt="">
+              </picture>
+           </div>
+           <p class="p-top-voice__name">都内大学生　田森さん</p>
+           <p class="p-top-voice__text">就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p>
+          </a>
         </div>
-
+        <div class="p-top-voice__list">
+          <a href="">
+           <div class="p-top-voice__img">
+              <picture>
+                <source media="(max-width: 767px)" srcset="./images/voice01-sp.jpg">
+                <img src="./images/voice01.jpg" alt="">
+              </picture>
+           </div>
+           <p class="p-top-voice__name">都内大学生　田森さん</p>
+           <p class="p-top-voice__text">就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p>
+          </a>
+        </div>           
+      </div>
     </div>
+  </section> 
 
-
-  </section>
-
-
-  
- 
-
+  <!-- <div class="p-voice">
+   <div class="c-title--white ">
+       <h2>生徒さんたちの声</h2>
+   </div>
+   <div class="p-voice-flex-area">
+     <div class="p-voice-flex-area slider-wrapper slick-initialized slick-slider">
+       <button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="">Previous</button>
+       <div class="slick-list draggable">
+         <div class="slick-track" style="opacity: 1; width: 4605px; transform: translate3d(-921px, 0px, 0px);">
+           <div class="p-voice-block slick-slide slick-cloned" data-slick-index="-3" id="" aria-hidden="true" tabindex="-1" style="width: 272px;">
+              <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                  <div class="p-voice-block__img">
+                      <picture>
+                          <source media="(min-width: 768px)" srcset="img/voice01-sp.jpg" width="270" height="190">
+                          <img src="images/voice01.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                      </picture>
+                  </div>
+                  <div class="p-voice-block__head"><h3>証券会社勤務 丸山さん</h3></div>
+                  <div class="p-voice-block__text"><p>昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p></div>
+              </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-cloned" data-slick-index="-2" id="" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice02-sp.jpg" width="270" height="190">
+                           <img src="images/voice02.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                   </div>
+                   <div class="p-voice-block__head"><h3>T会社勤務 S.Eさん</h3></div>
+                   <div class="p-voice-block__text"><p>プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-cloned" data-slick-index="-1" id="" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice03-sp.jpg" width="270" height="190">
+                           <img src="images/voice03.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                       </div>
+                   <div class="p-voice-block__head"><h3>都内大学生 田森さん</h3></div>
+                   <div class="p-voice-block__text"><p>就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="0" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="0">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice01-sp.jpg" width="270" height="190">
+                           <img src="images/voice01.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                   </div>
+                   <div class="p-voice-block__head"><h3>証券会社勤務 丸山さん</h3></div>
+                   <div class="p-voice-block__text"><p>昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-active" data-slick-index="1" aria-hidden="false" tabindex="0" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="0">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice02-sp.jpg" width="270" height="190">
+                           <img src="images/voice02.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                   </div>
+                   <div class="p-voice-block__head"><h3>IT会社勤務 S.Eさん</h3></div>
+                   <div class="p-voice-block__text"><p>プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-active" data-slick-index="2" aria-hidden="false" tabindex="0" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="0">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice03-sp.jpg" width="270" height="190">
+                           <img src="images/voice03.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                       </div>
+                   <div class="p-voice-block__head"><h3>都内大学生 田森さん</h3></div>
+                   <div class="p-voice-block__text"><p>就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice01-sp.jpg" width="270" height="190">
+                           <img src="images/voice01.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                   </div>
+                   <div class="p-voice-block__head"><h3>証券会社勤務 丸山さん</h3></div>
+                   <div class="p-voice-block__text"><p>昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide" data-slick-index="4" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice02-sp.jpg" width="270" height="190">
+                           <img src="images/voice02.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                   </div>
+                   <div class="p-voice-block__head"><h3>T会社勤務 S.Eさん</h3></div>
+                   <div class="p-voice-block__text"><p>プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide" data-slick-index="5" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice03-sp.jpg" width="270" height="190">
+                           <img src="images/voice03.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                       </div>
+                   <div class="p-voice-block__head"><h3>都内大学生 田森さん</h3></div>
+                   <div class="p-voice-block__text"><p>就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-cloned" data-slick-index="6" id="" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice01-sp.jpg" width="270" height="190">
+                           <img src="images/voice01.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                   </div>
+                   <div class="p-voice-block__head"><h3>証券会社勤務 丸山さん</h3></div>
+                   <div class="p-voice-block__text"><p>昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-cloned" data-slick-index="7" id="" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice02-sp.jpg" width="270" height="190">
+                           <img src="images/voice02.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                   </div>
+                   <div class="p-voice-block__head"><h3>IT会社勤務 S.Eさん</h3></div>
+                   <div class="p-voice-block__text"><p>プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-cloned" data-slick-index="8" id="" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice03-sp.jpg" width="270" height="190">
+                           <img src="images/voice03.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                       </div>
+                   <div class="p-voice-block__head"><h3>都内大学生 田森さん</h3></div>
+                   <div class="p-voice-block__text"><p>就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-cloned" data-slick-index="9" id="" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice01-sp.jpg" width="270" height="190">
+                           <img src="images/voice01.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                   </div>
+                   <div class="p-voice-block__head"><h3>証券会社勤務 丸山さん</h3></div>
+                   <div class="p-voice-block__text"><p>昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-cloned" data-slick-index="10" id="" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice02-sp.jpg" width="270" height="190">
+                           <img src="images/voice02.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                   </div>
+                   <div class="p-voice-block__head"><h3>T会社勤務 S.Eさん</h3></div>
+                   <div class="p-voice-block__text"><p>プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p></div>
+               </a>
+           </div>
+           <div class="p-voice-block slick-slide slick-cloned" data-slick-index="11" id="" aria-hidden="true" tabindex="-1" style="width: 272px;">
+               <a href="result_details.html" class="voice-block__anchor" tabindex="-1">
+                   <div class="p-voice-block__img">
+                       <picture>
+                           <source media="(min-width: 768px)" srcset="img/voice03-sp.jpg" width="270" height="190">
+                           <img src="images/voice03.jpg" width="335" height="200" alt="収益化するためのビジネスサポート！">
+                       </picture>
+                       </div>
+                   <div class="p-voice-block__head"><h3>都内大学生 田森さん</h3></div>
+                   <div class="p-voice-block__text"><p>就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p></div>
+               </a>
+           </div>
+         </div>
+       </div>         
+       <button class="slick-next slick-arrow" aria-label="Next" type="button" style="">Next</button>
+     </div>
+   </div>
+ </div> -->
 
 
 
@@ -215,7 +416,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
   <!-- slick読み込み -->
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
   <!-- javascriptの読み込み -->
   <script src="./js/main.js"> </script>
